Updated construction page

--- a/construction.html
+++ b/construction.html
@@ -77,7 +77,7 @@
         <div class="contentBx">
             <h1>Coming Soon...</h1>
             <p>The F1 Guide's new website will be live soon. Be ready for a bigger, better and a more enjoyable
-                experience! In the meantime <a href="test.apk" download>Download</a> our demo app to get a taste for what we are working on.</p>
+                experience! In the meantime <a href="F1GuideAlpha.apk" download>Download</a> our demo app to get a taste for what we are working on.</p>
         </div>
         <div class="imgBx">
             <img src="Logo.png">
